--- a/public/css/style_product.css
+++ b/public/css/style_product.css
@@ -2,33 +2,56 @@
 #product{
     margin-top: 15rem;
     width: 100%;
+    align-items: center;
 }
 .product_wrapper{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 14rem;
+    gap: 10rem;
     width: 90%;
 }
+.checkout {
+    background-color:orange;
+    font-size: medium;
+    border-radius: 4px ;
+    border: 2px white;
+    margin-left: 65%;
+    padding: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    font-weight: 600;
+}
+.checkout:hover {
+    background-color:peru;
+}
+
 .product_img {
     display: block;
     width: 50%;
+    top: 200px
 }
 .product_img img{
     display: block;
     object-fit: cover;
     width: 90%;
-    border-radius: 10px;
+    height: 90%;
+    border-radius: 30px  ;
+    border: solid 2px white;
     cursor: pointer;
     margin-left: auto;
+    margin-bottom: 25%;
 }
 .img_small{
     display: flex;
     justify-content: space-between;
     margin-top: 3rem;
     width: 90%;
+    height: 60%;
     margin-left: auto;
 }
+
+
 .img_small img{
     object-fit: cover;
     width: 22%;
@@ -38,8 +61,9 @@
     opacity: 0.7;
 }
 .product_content{
-    width: 50%;
+    width: 40%;
     margin: 0 auto;   
+    align-content: center;
 }
 .company_txt{
     color: white;
@@ -55,7 +79,7 @@
     color: white;
 }
 .product_desc{
-    width: 65%;
+
     margin: 2rem 0;
     font-size: 1rem;
     line-height: 1.56;
@@ -102,7 +126,6 @@
     margin-top: 3rem;
 }
 .btns{
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -115,6 +138,7 @@
     font-family: "Poppins", sans-serif;
     cursor: pointer;
     font-size: 2rem;
+    left: 20%;
 }
 .btns button :active{
     transform: scale(0.98);
@@ -136,10 +160,17 @@
     justify-content: space-between;
     padding: 1rem;
     border-radius: 5px;
-    margin:0 4rem 0 4rem;
+    margin:-4rem 15rem 10rem 15rem;
     cursor: pointer;
     width: 160px;
+    font-weight: 600;
 }
+
+.add_cart:hover {
+    background-color: burlywood;
+    font-weight: 600;
+}
+
 /* change cart size */
 .add_cart i{
     margin-right: 1rem;
