--- a/views/user/accessories.ejs
+++ b/views/user/accessories.ejs
@@ -43,26 +43,31 @@
               </div>
             </div>
         </div>  
+        
         <h1 class="text">Accessories</h1>  
-        <h2 class="game">
-            Playstation Accessories
-        </h2>
-        <div class="games">
-            <img src="/img/ps_headphone.jpg" alt="img" >
-            <img src="/img/ps_joystick.jpg" alt="img" >
-            <img src="/img/ps_wheel.jpg" alt="img" >
-
-        </div>
-        <h2 class="game">
-            Nintendo Accessories
-        </h2>
-        <div class="games">
-            <img src="/img/nin_wheel.jpg" alt="img" >
-            <img src="/img/nin_joycon.jpg" alt="img" >
-            <img src="/img/nin_joy.jpg" alt="img" >
-            <img src="/img/nin_g4.jpg" alt="img" >
-
-        </div>
+        <section id="features">
+          <div class="games">
+            <div class="container-fluid row">
+              <% accessories.forEach(accessories => { %>
+              <div class="col-sm-6 col-md-6 col-lg-4">
+                <div class="card w-96 glass" data-product-id="<%= accessories.id %>">
+                  <figure>
+                    <img
+                      src="<%= accessories.product_images %>"
+                      alt="<%= accessories.product_name %>"
+                    />
+                  </figure>
+                  <div class="card-body">
+                    <h2 class="card-title"><%= accessories.product_name %></h2>
+                    <p>Price: $<%= accessories.product_price %></p>
+                    <div class="card-actions justify-end"></div>
+                  </div>
+                </div>
+              </div>
+              <% }); %>
+            </div>
+          </div>
+        </section>
         <footer>
             <div class="footerContainer">
               <div class="socialIcons">
@@ -78,5 +83,24 @@
   
           </footer>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+          <script>
+                  document.addEventListener("DOMContentLoaded", function () {
+        const productCards = document.querySelectorAll(".card");
+
+        productCards.forEach((card) => {
+          card.addEventListener("click", function () {
+            const productId = card.getAttribute("data-product-id");
+
+            // ตรวจสอบว่า productId ไม่เป็น null หรือ undefined ก่อนที่จะทำการ redirect
+            if (productId) {
+              // Redirect ไปยังหน้า productDetail พร้อมส่ง productId ไปด้วย
+              window.location.href = "/productDetail/" + productId;
+            } else {
+              console.error("productId is null or undefined");
+            }
+          });
+        });
+      });
+          </script>
     </body>
 </html>    
