--- a/views/user/consoles.ejs
+++ b/views/user/consoles.ejs
@@ -1,80 +1,125 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initail-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initail-scale=1.0" />
     <title>Consoles</title>
-    <link rel="stylesheet" href="/css/style_header.css">
-    <link rel="stylesheet" href="/css/style_footer.css">
-    <link rel="stylesheet" href="/css/style_consoles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+    <link rel="stylesheet" href="/css/style_header.css" />
+    <link rel="stylesheet" href="/css/style_footer.css" />
+    <link rel="stylesheet" href="/css/style_consoles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <a href="/home" class="logo"><img src="img/PS5.png" alt="logo" width="200" height="100"></a>
-        <nav class="navbar">
-            <a href="/home">Home</a>
-            <!-- bootstrap -->
-            <div class="dropdown">
-                <a class="  dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown">
-                    Product
-                </a>
+      <a href="/home" class="logo"
+        ><img src="img/PS5.png" alt="logo" width="200" height="100"
+      /></a>
+      <nav class="navbar">
+        <a href="/home">Home</a>
+        <!-- bootstrap -->
+        <div class="dropdown">
+          <a
+            class="dropdown-toggle"
+            href="#"
+            role="button"
+            id="dropdownMenuLink"
+            data-bs-toggle="dropdown"
+          >
+            Product
+          </a>
 
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <li><a class="dropdown-item" href="/consoles">Consoles</a></li>
-                    <li><a class="dropdown-item" href="/games">Games</a></li>
-                    <li><a class="dropdown-item" href="/accessories">Accessories</a></li>
-                </ul>
-            </div>
-            <a href="#">Cart</a>
-            <a href="/contact">CONTACT US</a>
-            <a href="/login">Log out</a>
-        </nav>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><a class="dropdown-item" href="/consoles">Consoles</a></li>
+            <li><a class="dropdown-item" href="/games">Games</a></li>
+            <li>
+              <a class="dropdown-item" href="/accessories">Accessories</a>
+            </li>
+          </ul>
+        </div>
+        <a href="#">Cart</a>
+        <a href="/contact">CONTACT US</a>
+        <a href="/login">Log out</a>
+      </nav>
     </header>
     <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="\img\console_slide.jpg">
-            </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="\img\console.png" style="border: 3px black;" />
         </div>
+      </div>
     </div>
     <h1 class="text">Consoles</h1>
-    <h2 class="game">
-        Playstation Consoles
-    </h2>
-    <div class="games">
-        <img src="/img/console_ps5img.jpg" alt="img">
-        <img src="/img/console_ps5img2.jpg" alt="img">
-        <img src="/img/console_ps4.jpg" alt="img">
-        <img src="/img/ps_vr.jpg" alt="img">
-    </div>
-    <h2 class="game">
-        Nintendo Consoles
-    </h2>
-    <div class="games">
-        <img src="/img/console_nin_img.jpg" alt="img">
-        <img src="/img/console_nin_img2.jpg" alt="img">
-        <img src="/img/console_nin_img3.jpg" alt="img">
-    </div>
-    <footer>
-        <div class="footerContainer">
-            <div class="socialIcons">
-                <a herf=""><i class='bx bxl-facebook-circle'></i></a>
-                <a herf=""><i class='bx bxl-instagram-alt'></i></a>
-                <a herf=""><i class='bx bxl-twitter'></i></a>
-                <a herf=""><i class='bx bxl-youtube'></i></a>
+    <section id="features">
+      <div class="games">
+        <div class="container-fluid row">
+          <% consoles.forEach(console => { %>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <div class="card w-96 glass" data-product-id="<%= console.id %>">
+              <figure>
+                <img
+                  src="<%= console.product_images %>"
+                  alt="<%= console.product_name %>"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title"><%= console.product_name %></h2>
+                <p>Price: $<%= console.product_price %></p>
+                <div class="card-actions justify-end"></div>
+              </div>
             </div>
-            <div class="footer">
-                <p>copy right &copy;2024;Designed by My Team</p>
-            </div>
+          </div>
+          <% }); %>
         </div>
+      </div>
+    </section>
 
+    <footer>
+      <div class="footerContainer">
+        <div class="socialIcons">
+          <a herf=""><i class="bx bxl-facebook-circle"></i></a>
+          <a herf=""><i class="bx bxl-instagram-alt"></i></a>
+          <a herf=""><i class="bx bxl-twitter"></i></a>
+          <a herf=""><i class="bx bxl-youtube"></i></a>
+        </div>
+        <div class="footer">
+          <p>copy right &copy;2024;Designed by My Team</p>
+        </div>
+      </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+        const productCards = document.querySelectorAll(".card");
 
+        productCards.forEach((card) => {
+          card.addEventListener("click", function () {
+            const productId = card.getAttribute("data-product-id");
+
+            // ตรวจสอบว่า productId ไม่เป็น null หรือ undefined ก่อนที่จะทำการ redirect
+            if (productId) {
+              // Redirect ไปยังหน้า productDetail พร้อมส่ง productId ไปด้วย
+              window.location.href = "/productDetail/" + productId;
+            } else {
+              console.error("productId is null or undefined");
+            }
+          });
+        });
+      });
+    </script>
+  </body>
 </html>
