--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,110 +1,162 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="/css/style_header.css">
-    <link rel="stylesheet" href="/css/style_home.css">
-    <link rel="stylesheet" href="/css/style_footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+    <link rel="stylesheet" href="/css/style_header.css" />
+    <link rel="stylesheet" href="/css/style_home.css" />
+    <link rel="stylesheet" href="/css/style_footer.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-
+  <body>
     <header class="header">
-        <a href="/home" class="logo"><img src="img/PS5.png" alt="logo" width="150" height="50"></a>
-        <nav class="navbar">
-            <a href="/home">HOME</a>
-            <div class="dropdown">
-                <a class="  dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown">
-                    PRODUCT
-                </a>
+      <a href="/home" class="logo"
+        ><img src="img/PS5.png" alt="logo" width="150" height="50"
+      /></a>
+      <nav class="navbar">
+        <a href="/home">HOME</a>
+        <div class="dropdown">
+          <a
+            class="dropdown-toggle"
+            href="#"
+            role="button"
+            id="dropdownMenuLink"
+            data-bs-toggle="dropdown"
+          >
+            PRODUCT
+          </a>
 
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                  <li><a class="dropdown-item" href="/consoles">CONSOLES</a></li>
-                  <li><a class="dropdown-item" href="/games">GAMES</a></li>
-                  <li><a class="dropdown-item" href="/accessories">ACCESSORIES</a></li>
-              </ul>              
-            </div>
-            <a href="#">CART</a>
-            <a href="/contact">CONTACT US</a>
-            <a href="/login">LOG OUT</a>
-        </nav>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><a class="dropdown-item" href="/consoles">CONSOLES</a></li>
+            <li><a class="dropdown-item" href="/games">GAMES</a></li>
+            <li>
+              <a class="dropdown-item" href="/accessories">ACCESSORIES</a>
+            </li>
+          </ul>
+        </div>
+        <a href="#">CART</a>
+        <a href="/contact">CONTACT US</a>
+        <a href="/login">LOG OUT</a>
+      </nav>
     </header>
 
     <!-- bootstrap -->
     <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/promote1.png">
-            </div>
-            <div class="carousel-item">
-                <img src="img/promote2.png">
-            </div>
-            <div class="carousel-item">
-                <img src="\img\nin_slide.jpg">
-            </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/promote1.png" />
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        <div class="carousel-item">
+          <img src="img/promote2.png" />
+        </div>
+        <div class="carousel-item">
+          <img src="\img\nin_slide.jpg" />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
 
     <h2 class="TextTop5">Top 5 Games in Your Country for PS5</h2>
     <section id="features">
-        <div class="games">
-            <div class="container-fluid row">
-                <% ps5Games.forEach(game => { %>
-                    <div class="col-sm-6 col-md-6 col-lg-4">
-                        <div class="card w-96 glass">
-                            <figure><img src="<%= game.product_images %>" alt="<%= game.product_name %>" /></figure>
-                            <div class="card-body">
-                                <h2 class="card-title"><%= game.product_name %></h2>
-                                <p>Price: $<%= game.product_price %></p>
-                                <div class="card-actions justify-end">
-                                    <button class="btn btn-primary">ADD TO CART</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <% }); %>
+      <div class="games">
+        <div class="container-fluid row">
+          <% ps5Games.forEach(game => { %>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <div class="card w-96 glass" data-product-id="<%= game.id %>">
+              <figure>
+                <img
+                  src="<%= game.product_images %>"
+                  alt="<%= game.product_name %>"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title"><%= game.product_name %></h2>
+                <p>Price: $<%= game.product_price %></p>
+                <div class="card-actions justify-end"></div>
+              </div>
             </div>
-        </div>
-    </section>
-    
-        
-        <div class="img-container">
-          <img src="/img/footer.png" alt="img" width="100%" height="500px">
-      </div>
-      <footer>
-          <div class="footerContainer">
-              <div class="socialIcons">
-                  <a herf=""><i class='bx bxl-facebook-circle'></i></a>
-                  <a herf=""><i class='bx bxl-instagram-alt'></i></a>
-                  <a herf=""><i class='bx bxl-twitter'></i></a>
-                  <a herf=""><i class='bx bxl-youtube'></i></a>
-              </div>
-              <div class="footer">
-                  <p>copy right &copy;2024;Designed by My Team</p>
-              </div>
           </div>
-  
-      </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-          crossorigin="anonymous"></script>
+          <% }); %>
+        </div>
+      </div>
+    </section>
+
+    <div class="img-container">
+      <img src="/img/ps5footer.png" alt="img" width="100%" height="600" />
+    </div>
+    <footer>
+      <div class="footerContainer">
+        <div class="socialIcons">
+          <a herf=""><i class="bx bxl-facebook-circle"></i></a>
+          <a herf=""><i class="bx bxl-instagram-alt"></i></a>
+          <a herf=""><i class="bx bxl-twitter"></i></a>
+          <a herf=""><i class="bx bxl-youtube"></i></a>
+        </div>
+        <div class="footer">
+          <p>copy right &copy;2024</p>
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const productCards = document.querySelectorAll(".card");
+
+        productCards.forEach((card) => {
+          card.addEventListener("click", function () {
+            const productId = card.getAttribute("data-product-id");
+
+            // ตรวจสอบว่า productId ไม่เป็น null หรือ undefined ก่อนที่จะทำการ redirect
+            if (productId) {
+              // Redirect ไปยังหน้า productDetail พร้อมส่ง productId ไปด้วย
+              window.location.href = "/productDetail/" + productId;
+            } else {
+              console.error("productId is null or undefined");
+            }
+          });
+        });
+      });
+    </script>
   </body>
-  
-  </html>
+</html>
